--- a/views/studentprofile.ejs
+++ b/views/studentprofile.ejs
@@ -42,7 +42,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1>Hi, <%= user.firstName %> </h1>
+                            <h1 class="userGreet">Hi, <%= user.firstName %> </h1>
 
                             <body>
                                 
