--- a/views/login.ejs
+++ b/views/login.ejs
@@ -91,14 +91,14 @@
       <div class="sec-2">
         <ion-icon name="lock-closed-outline"></ion-icon>
         <input class="pas" type="password" name="password" placeholder="············"/>
-        <ion-icon class="show-hide" name="eye-outline"></ion-icon>
+        <!-- <ion-icon class="show-hide" name="eye-outline"></ion-icon> -->
       </div>
     </div>
 
 
 
     <button class="login" type="submit">Login </button>
-    <!-- <div class="footer"><span onclick="window.location='/signup'">Signup</span><span></span></div> -->
+   
 </form>
   </div>
   <!-- partial -->
